# MOUSE-DATA

./: .gitignore  .python-version  CNN + PPO.drawio  README.md  ppo.py  pyproject.toml
Mouse-Data-Old/: changetxt2csv.ipynb  onnx_analysis copy.ipynb  onnx_analysis.ipynb  performance.ipynb  plot.ipynb  rsa_analysis_brain.ipynb  rsa_analysis_compare.ipynb  rsa_analysis_layer.ipynb  speed.ipynb
Mouse-Data-Old/1014-visual-1.3/: changetxt2csv.ipynb
Mouse-Data-Old/1018-visual-1.43-left/: changetxt2csv.ipynb
